# yieldway

./: .gitignore  Cargo.toml  FINAL_PROJECT_SUMMARY.md  PROGRESS.md  README.md  SOROSWAP_STAGING_SUMMARY.md  STAGING_API_ALIGNMENT_CHECKLIST.md  STATUS_REPORT.md  STATUS_REPORT_FINAL.md  UX_ENHANCEMENT_REPORT.md  deployment.json  env.template  package-lock.json  package.json  testnet-accounts.json
.stellar/identity/: admin.toml
contracts/factory/: Cargo.toml
contracts/factory/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/factory/test_snapshots/test/: test_deployment_tracking.1.json  test_pause_functionality.1.json
contracts/router/: Cargo.toml
contracts/router/src/: errors.rs  events.rs  integrations.rs  lib.rs  storage.rs  test.rs
contracts/router/test_snapshots/test/: test_double_initialization.1.json
contracts/uyt/: Cargo.toml
contracts/uyt/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/uyt/test_snapshots/test/: test_initialize.1.json  (+1 more)
docs/: DeFindex-Complete-Documentation_Version3.md  SOROSWAP_COMPLETE_DOCUMENTATION.md  YIELDWAY_DEVELOPMENT_ROADMAP.md  details.md  guide.md
frontend/: package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DepositWithdraw.tsx  RealtimeChart.tsx  TransactionHistory.tsx
frontend/src/lib/: stellar.ts
frontend/src/types/: freighter.d.ts
scripts/: apy-monitor.js  check-progress.sh  soroswap-integration.js  test-contracts.js
scripts/testnet/: deploy-contracts.js  package.json  setup-accounts.js  testnet-accounts.json
(+4 files in other folders)
