[workspace]
members = [
    "contracts/router",
    "contracts/uyt", 
    "contracts/factory"
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "23.0.0-rc.2.2"
soroban-token-sdk = "23.0.0-rc.2.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true 